--- a/edi_document_sync/views/edi_config_view.xml
+++ b/edi_document_sync/views/edi_config_view.xml
@@ -168,6 +168,7 @@
                                         <field name="sequence" widget="handle"/>
                                         <field name="doc_type_id"  options="{'no_open':True,'no_create':True}"/>
                                         <field name="op_type" invisible="1"/>
+                                        <field name="dir_path"/>
                                         <field name="active"/>
                                         <field name="last_sync_date" readonly="1"/>
                                         <field name="company_id"/>
@@ -185,6 +186,7 @@
                                             <group>
                                                 <group>
                                                     <field name="company_id"/>
+                                                    <field name="dir_path"/>
                                                     <field name="dir_mv_path" attrs="{'invisible': [('op_type', '!=', 'in-mv')], 'required': [('op_type', '=', 'in-mv')]}"/>
                                                 </group>
                                                 <group>
